// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sign getSigningBytes should return transaction bytes for given params 1`] = `
Object {
  "data": Array [
    10,
    4,
    0,
    0,
    0,
    2,
    18,
    4,
    0,
    0,
    0,
    0,
    24,
    1,
    32,
    128,
    173,
    226,
    4,
    42,
    32,
    241,
    185,
    244,
    238,
    113,
    181,
    213,
    133,
    125,
    59,
    52,
    109,
    68,
    28,
    169,
    103,
    242,
    120,
    112,
    235,
    238,
    136,
    86,
    157,
    179,
    100,
    253,
    19,
    226,
    138,
    219,
    163,
    50,
    33,
    8,
    128,
    250,
    191,
    166,
    178,
    182,
    143,
    7,
    18,
    20,
    58,
    151,
    31,
    208,
    43,
    74,
    7,
    252,
    32,
    170,
    209,
    147,
    109,
    60,
    177,
    210,
    99,
    185,
    110,
    15,
    26,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`sign signTransactionWithPrivateKey should return signed transaction for given params schema 1`] = `
Object {
  "commandID": Object {
    "data": Array [
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      1,
      65,
      204,
      5,
      97,
      125,
      178,
      202,
      76,
      171,
      88,
      150,
      199,
      139,
      15,
      251,
      242,
      90,
      241,
      9,
      132,
      164,
      255,
      217,
      32,
      158,
      184,
      22,
      252,
      25,
      87,
      200,
    ],
    "type": "Buffer",
  },
  "moduleID": Object {
    "data": Array [
      0,
      0,
      0,
      2,
    ],
    "type": "Buffer",
  },
  "nonce": 1n,
  "params": Object {
    "amount": 4008489300000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        58,
        151,
        31,
        208,
        43,
        74,
        7,
        252,
        32,
        170,
        209,
        147,
        109,
        60,
        177,
        210,
        99,
        185,
        110,
        15,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      241,
      185,
      244,
      238,
      113,
      181,
      213,
      133,
      125,
      59,
      52,
      109,
      68,
      28,
      169,
      103,
      242,
      120,
      112,
      235,
      238,
      136,
      86,
      157,
      179,
      100,
      253,
      19,
      226,
      138,
      219,
      163,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        53,
        144,
        231,
        44,
        205,
        231,
        15,
        117,
        221,
        178,
        93,
        145,
        23,
        166,
        28,
        231,
        147,
        147,
        62,
        146,
        210,
        149,
        207,
        208,
        148,
        210,
        198,
        240,
        132,
        74,
        118,
        107,
        183,
        55,
        196,
        6,
        13,
        142,
        150,
        11,
        247,
        146,
        18,
        184,
        86,
        17,
        51,
        79,
        63,
        138,
        206,
        193,
        14,
        9,
        188,
        178,
        0,
        35,
        20,
        236,
        195,
        100,
        164,
        6,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Both mandatory and optional member group should have correct signatures 1`] = `
Object {
  "commandID": Object {
    "data": Array [
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "fee": 1500000000n,
  "moduleID": Object {
    "data": Array [
      0,
      0,
      0,
      12,
    ],
    "type": "Buffer",
  },
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          74,
          103,
          100,
          106,
          68,
          99,
          19,
          219,
          150,
          76,
          57,
          55,
          3,
          89,
          132,
          92,
          82,
          252,
          233,
          34,
          90,
          57,
          41,
          119,
          14,
          244,
          20,
          72,
          194,
          88,
          253,
          57,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          241,
          185,
          244,
          238,
          113,
          181,
          213,
          133,
          125,
          59,
          52,
          109,
          68,
          28,
          169,
          103,
          242,
          120,
          112,
          235,
          238,
          136,
          86,
          157,
          179,
          100,
          253,
          19,
          226,
          138,
          219,
          163,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 4,
    "optionalKeys": Array [
      Object {
        "data": Array [
          87,
          223,
          92,
          56,
          17,
          150,
          25,
          57,
          248,
          220,
          250,
          133,
          140,
          110,
          174,
          254,
          191,
          170,
          77,
          233,
          66,
          247,
          231,
          3,
          191,
          136,
          18,
          126,
          14,
          233,
          204,
          164,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          250,
          64,
          107,
          105,
          82,
          211,
          119,
          240,
          39,
          137,
          32,
          227,
          235,
          141,
          169,
          25,
          228,
          207,
          92,
          104,
          176,
          46,
          235,
          165,
          216,
          179,
          51,
          79,
          220,
          3,
          105,
          182,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        110,
        118,
        108,
        228,
        193,
        205,
        174,
        218,
        55,
        63,
        85,
        20,
        41,
        123,
        230,
        189,
        123,
        187,
        137,
        211,
        4,
        15,
        19,
        154,
        126,
        200,
        234,
        16,
        77,
        21,
        116,
        19,
        17,
        12,
        85,
        157,
        181,
        58,
        202,
        128,
        96,
        201,
        219,
        180,
        246,
        6,
        18,
        77,
        186,
        209,
        175,
        19,
        188,
        143,
        212,
        133,
        107,
        179,
        112,
        183,
        58,
        8,
        27,
        5,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        59,
        2,
        142,
        184,
        134,
        49,
        103,
        85,
        47,
        148,
        10,
        174,
        20,
        112,
        110,
        78,
        115,
        168,
        149,
        231,
        116,
        79,
        154,
        68,
        133,
        125,
        37,
        153,
        110,
        132,
        223,
        199,
        41,
        222,
        95,
        185,
        16,
        14,
        150,
        227,
        168,
        94,
        138,
        208,
        16,
        232,
        30,
        179,
        139,
        54,
        54,
        155,
        95,
        18,
        158,
        19,
        223,
        32,
        31,
        108,
        185,
        21,
        87,
        1,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        166,
        110,
        207,
        239,
        215,
        196,
        59,
        42,
        201,
        124,
        70,
        46,
        2,
        249,
        146,
        235,
        168,
        24,
        136,
        67,
        129,
        67,
        49,
        205,
        79,
        93,
        86,
        43,
        202,
        49,
        168,
        52,
        52,
        147,
        20,
        66,
        85,
        76,
        106,
        234,
        85,
        253,
        209,
        20,
        198,
        159,
        193,
        232,
        113,
        52,
        66,
        204,
        186,
        141,
        28,
        212,
        92,
        3,
        176,
        58,
        158,
        252,
        8,
        8,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        114,
        43,
        229,
        59,
        178,
        52,
        139,
        169,
        68,
        58,
        188,
        48,
        243,
        188,
        241,
        175,
        56,
        12,
        56,
        59,
        93,
        82,
        25,
        242,
        153,
        21,
        149,
        50,
        221,
        90,
        242,
        177,
        186,
        153,
        102,
        71,
        145,
        169,
        127,
        72,
        76,
        189,
        163,
        126,
        147,
        106,
        79,
        102,
        212,
        30,
        220,
        230,
        154,
        5,
        68,
        36,
        2,
        99,
        121,
        20,
        45,
        144,
        161,
        12,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        16,
        17,
        143,
        240,
        16,
        102,
        43,
        10,
        7,
        19,
        163,
        68,
        116,
        239,
        168,
        46,
        217,
        81,
        161,
        144,
        66,
        32,
        181,
        161,
        194,
        50,
        119,
        50,
        253,
        23,
        149,
        247,
        125,
        163,
        140,
        11,
        18,
        244,
        36,
        147,
        84,
        78,
        117,
        54,
        138,
        126,
        125,
        133,
        55,
        0,
        190,
        187,
        5,
        54,
        23,
        100,
        133,
        103,
        195,
        208,
        60,
        116,
        104,
        11,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Only mandatory members should have correct signatures 1`] = `
Object {
  "commandID": Object {
    "data": Array [
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "fee": 1500000000n,
  "moduleID": Object {
    "data": Array [
      0,
      0,
      0,
      12,
    ],
    "type": "Buffer",
  },
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          74,
          103,
          100,
          106,
          68,
          99,
          19,
          219,
          150,
          76,
          57,
          55,
          3,
          89,
          132,
          92,
          82,
          252,
          233,
          34,
          90,
          57,
          41,
          119,
          14,
          244,
          20,
          72,
          194,
          88,
          253,
          57,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          241,
          185,
          244,
          238,
          113,
          181,
          213,
          133,
          125,
          59,
          52,
          109,
          68,
          28,
          169,
          103,
          242,
          120,
          112,
          235,
          238,
          136,
          86,
          157,
          179,
          100,
          253,
          19,
          226,
          138,
          219,
          163,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 2,
    "optionalKeys": Array [],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        239,
        6,
        193,
        98,
        240,
        239,
        84,
        10,
        216,
        233,
        25,
        24,
        100,
        134,
        70,
        251,
        87,
        30,
        205,
        197,
        5,
        144,
        244,
        23,
        223,
        115,
        182,
        50,
        221,
        189,
        255,
        152,
        43,
        39,
        73,
        43,
        139,
        13,
        43,
        199,
        59,
        159,
        31,
        245,
        39,
        170,
        178,
        82,
        212,
        70,
        111,
        153,
        31,
        171,
        118,
        24,
        196,
        225,
        129,
        153,
        253,
        169,
        28,
        14,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        228,
        116,
        65,
        127,
        113,
        127,
        223,
        65,
        196,
        193,
        178,
        248,
        2,
        121,
        231,
        106,
        30,
        60,
        81,
        248,
        49,
        61,
        134,
        224,
        224,
        191,
        223,
        226,
        216,
        155,
        46,
        200,
        22,
        155,
        90,
        59,
        117,
        146,
        249,
        107,
        184,
        174,
        35,
        107,
        24,
        11,
        253,
        125,
        157,
        126,
        95,
        225,
        17,
        47,
        176,
        16,
        61,
        43,
        244,
        9,
        38,
        166,
        162,
        1,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        164,
        36,
        66,
        136,
        110,
        198,
        253,
        211,
        102,
        230,
        175,
        217,
        238,
        248,
        83,
        214,
        81,
        6,
        140,
        212,
        163,
        130,
        163,
        68,
        237,
        9,
        217,
        155,
        216,
        196,
        211,
        165,
        228,
        51,
        255,
        251,
        16,
        240,
        249,
        73,
        31,
        185,
        136,
        232,
        142,
        250,
        123,
        158,
        114,
        38,
        175,
        9,
        73,
        174,
        99,
        228,
        172,
        235,
        31,
        69,
        201,
        20,
        30,
        11,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Only optional members should have correct signatures 1`] = `
Object {
  "commandID": Object {
    "data": Array [
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "fee": 1500000000n,
  "moduleID": Object {
    "data": Array [
      0,
      0,
      0,
      12,
    ],
    "type": "Buffer",
  },
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [],
    "numberOfSignatures": 1,
    "optionalKeys": Array [
      Object {
        "data": Array [
          87,
          223,
          92,
          56,
          17,
          150,
          25,
          57,
          248,
          220,
          250,
          133,
          140,
          110,
          174,
          254,
          191,
          170,
          77,
          233,
          66,
          247,
          231,
          3,
          191,
          136,
          18,
          126,
          14,
          233,
          204,
          164,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          250,
          64,
          107,
          105,
          82,
          211,
          119,
          240,
          39,
          137,
          32,
          227,
          235,
          141,
          169,
          25,
          228,
          207,
          92,
          104,
          176,
          46,
          235,
          165,
          216,
          179,
          51,
          79,
          220,
          3,
          105,
          182,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        2,
        231,
        183,
        32,
        216,
        252,
        152,
        192,
        187,
        216,
        125,
        97,
        9,
        148,
        159,
        174,
        15,
        176,
        199,
        224,
        215,
        207,
        106,
        143,
        17,
        53,
        83,
        246,
        236,
        26,
        234,
        122,
        47,
        96,
        199,
        255,
        114,
        96,
        29,
        197,
        113,
        220,
        161,
        115,
        9,
        4,
        109,
        180,
        66,
        85,
        184,
        191,
        94,
        173,
        130,
        164,
        98,
        77,
        84,
        197,
        108,
        131,
        141,
        9,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        121,
        240,
        14,
        57,
        56,
        54,
        204,
        103,
        100,
        7,
        95,
        144,
        33,
        59,
        33,
        150,
        132,
        219,
        83,
        0,
        106,
        9,
        89,
        27,
        207,
        109,
        219,
        216,
        116,
        142,
        140,
        231,
        135,
        183,
        192,
        222,
        218,
        201,
        119,
        50,
        161,
        9,
        221,
        187,
        95,
        25,
        199,
        160,
        152,
        44,
        136,
        197,
        89,
        255,
        246,
        232,
        83,
        215,
        65,
        84,
        80,
        14,
        218,
        7,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        225,
        240,
        237,
        127,
        48,
        38,
        197,
        7,
        95,
        217,
        9,
        201,
        111,
        5,
        166,
        243,
        94,
        138,
        35,
        236,
        226,
        98,
        236,
        140,
        193,
        248,
        53,
        130,
        177,
        127,
        207,
        114,
        54,
        9,
        90,
        121,
        38,
        72,
        167,
        26,
        129,
        10,
        253,
        175,
        201,
        215,
        137,
        145,
        158,
        156,
        51,
        33,
        75,
        233,
        26,
        175,
        54,
        140,
        227,
        2,
        223,
        220,
        68,
        5,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Second signature case should have correct signatures 1`] = `
Object {
  "commandID": Object {
    "data": Array [
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "fee": 1500000000n,
  "moduleID": Object {
    "data": Array [
      0,
      0,
      0,
      12,
    ],
    "type": "Buffer",
  },
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          11,
          33,
          31,
          206,
          75,
          97,
          80,
          131,
          112,
          28,
          184,
          168,
          201,
          148,
          7,
          228,
          100,
          178,
          249,
          170,
          79,
          54,
          112,
          149,
          50,
          45,
          225,
          183,
          126,
          95,
          207,
          190,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          255,
          48,
          239,
          64,
          183,
          222,
          66,
          17,
          65,
          55,
          190,
          70,
          241,
          0,
          157,
          48,
          229,
          193,
          152,
          9,
          167,
          61,
          90,
          22,
          43,
          201,
          159,
          126,
          118,
          129,
          214,
          61,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 2,
    "optionalKeys": Array [],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        74,
        203,
        121,
        134,
        238,
        186,
        59,
        188,
        37,
        4,
        101,
        97,
        149,
        78,
        84,
        112,
        14,
        44,
        185,
        150,
        24,
        211,
        127,
        169,
        151,
        203,
        184,
        44,
        13,
        242,
        15,
        218,
        34,
        130,
        148,
        178,
        171,
        18,
        176,
        152,
        27,
        120,
        15,
        99,
        197,
        13,
        25,
        50,
        168,
        235,
        176,
        148,
        75,
        39,
        53,
        11,
        84,
        138,
        207,
        185,
        124,
        25,
        188,
        3,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        74,
        203,
        121,
        134,
        238,
        186,
        59,
        188,
        37,
        4,
        101,
        97,
        149,
        78,
        84,
        112,
        14,
        44,
        185,
        150,
        24,
        211,
        127,
        169,
        151,
        203,
        184,
        44,
        13,
        242,
        15,
        218,
        34,
        130,
        148,
        178,
        171,
        18,
        176,
        152,
        27,
        120,
        15,
        99,
        197,
        13,
        25,
        50,
        168,
        235,
        176,
        148,
        75,
        39,
        53,
        11,
        84,
        138,
        207,
        185,
        124,
        25,
        188,
        3,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        18,
        205,
        113,
        63,
        182,
        166,
        17,
        115,
        207,
        76,
        144,
        84,
        143,
        49,
        125,
        104,
        249,
        184,
        63,
        162,
        15,
        122,
        209,
        195,
        101,
        184,
        22,
        5,
        144,
        149,
        146,
        163,
        16,
        204,
        61,
        27,
        235,
        74,
        178,
        153,
        194,
        61,
        77,
        145,
        19,
        134,
        50,
        68,
        180,
        124,
        208,
        152,
        4,
        40,
        34,
        37,
        3,
        164,
        126,
        121,
        22,
        25,
        250,
        15,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Sender is a member of the group should have correct signatures 1`] = `
Object {
  "commandID": Object {
    "data": Array [
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "fee": 1500000000n,
  "moduleID": Object {
    "data": Array [
      0,
      0,
      0,
      12,
    ],
    "type": "Buffer",
  },
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          11,
          33,
          31,
          206,
          75,
          97,
          80,
          131,
          112,
          28,
          184,
          168,
          201,
          148,
          7,
          228,
          100,
          178,
          249,
          170,
          79,
          54,
          112,
          149,
          50,
          45,
          225,
          183,
          126,
          95,
          207,
          190,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          74,
          103,
          100,
          106,
          68,
          99,
          19,
          219,
          150,
          76,
          57,
          55,
          3,
          89,
          132,
          92,
          82,
          252,
          233,
          34,
          90,
          57,
          41,
          119,
          14,
          244,
          20,
          72,
          194,
          88,
          253,
          57,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          241,
          185,
          244,
          238,
          113,
          181,
          213,
          133,
          125,
          59,
          52,
          109,
          68,
          28,
          169,
          103,
          242,
          120,
          112,
          235,
          238,
          136,
          86,
          157,
          179,
          100,
          253,
          19,
          226,
          138,
          219,
          163,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 4,
    "optionalKeys": Array [
      Object {
        "data": Array [
          87,
          223,
          92,
          56,
          17,
          150,
          25,
          57,
          248,
          220,
          250,
          133,
          140,
          110,
          174,
          254,
          191,
          170,
          77,
          233,
          66,
          247,
          231,
          3,
          191,
          136,
          18,
          126,
          14,
          233,
          204,
          164,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          250,
          64,
          107,
          105,
          82,
          211,
          119,
          240,
          39,
          137,
          32,
          227,
          235,
          141,
          169,
          25,
          228,
          207,
          92,
          104,
          176,
          46,
          235,
          165,
          216,
          179,
          51,
          79,
          220,
          3,
          105,
          182,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        71,
        133,
        122,
        148,
        47,
        71,
        33,
        219,
        183,
        77,
        97,
        195,
        240,
        203,
        162,
        38,
        164,
        242,
        98,
        66,
        127,
        147,
        189,
        32,
        119,
        206,
        95,
        35,
        136,
        217,
        160,
        139,
        217,
        130,
        35,
        245,
        118,
        148,
        198,
        94,
        195,
        89,
        186,
        18,
        220,
        39,
        96,
        99,
        10,
        112,
        39,
        233,
        68,
        23,
        239,
        80,
        16,
        124,
        120,
        202,
        11,
        89,
        178,
        4,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        71,
        133,
        122,
        148,
        47,
        71,
        33,
        219,
        183,
        77,
        97,
        195,
        240,
        203,
        162,
        38,
        164,
        242,
        98,
        66,
        127,
        147,
        189,
        32,
        119,
        206,
        95,
        35,
        136,
        217,
        160,
        139,
        217,
        130,
        35,
        245,
        118,
        148,
        198,
        94,
        195,
        89,
        186,
        18,
        220,
        39,
        96,
        99,
        10,
        112,
        39,
        233,
        68,
        23,
        239,
        80,
        16,
        124,
        120,
        202,
        11,
        89,
        178,
        4,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        221,
        203,
        173,
        116,
        127,
        205,
        88,
        64,
        244,
        85,
        31,
        241,
        136,
        152,
        61,
        82,
        160,
        237,
        77,
        209,
        71,
        8,
        12,
        149,
        37,
        174,
        217,
        229,
        236,
        24,
        1,
        71,
        195,
        13,
        114,
        223,
        197,
        219,
        104,
        113,
        232,
        167,
        87,
        141,
        3,
        216,
        44,
        242,
        211,
        218,
        133,
        174,
        218,
        100,
        128,
        33,
        208,
        253,
        120,
        71,
        115,
        187,
        210,
        1,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        245,
        104,
        153,
        229,
        26,
        83,
        61,
        216,
        171,
        82,
        99,
        247,
        177,
        82,
        81,
        107,
        27,
        38,
        12,
        86,
        74,
        98,
        175,
        140,
        213,
        220,
        5,
        14,
        53,
        133,
        102,
        86,
        91,
        134,
        110,
        3,
        228,
        12,
        208,
        177,
        75,
        78,
        190,
        15,
        52,
        187,
        56,
        163,
        38,
        150,
        238,
        52,
        8,
        55,
        14,
        186,
        74,
        241,
        102,
        199,
        155,
        219,
        49,
        2,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        231,
        153,
        161,
        220,
        146,
        31,
        7,
        60,
        201,
        105,
        80,
        194,
        104,
        181,
        21,
        239,
        234,
        182,
        23,
        152,
        247,
        220,
        194,
        53,
        92,
        210,
        81,
        185,
        19,
        192,
        144,
        0,
        29,
        24,
        216,
        199,
        221,
        120,
        26,
        248,
        186,
        252,
        4,
        76,
        173,
        99,
        189,
        94,
        101,
        5,
        141,
        133,
        42,
        116,
        96,
        253,
        26,
        188,
        175,
        31,
        221,
        190,
        81,
        2,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        18,
        80,
        190,
        72,
        3,
        131,
        47,
        203,
        106,
        70,
        215,
        116,
        207,
        175,
        177,
        221,
        10,
        97,
        38,
        0,
        28,
        174,
        165,
        237,
        157,
        203,
        225,
        111,
        108,
        98,
        44,
        205,
        76,
        44,
        224,
        182,
        232,
        175,
        215,
        11,
        191,
        253,
        170,
        151,
        199,
        100,
        20,
        45,
        239,
        244,
        78,
        209,
        122,
        234,
        154,
        229,
        142,
        218,
        166,
        50,
        79,
        166,
        241,
        1,
      ],
      "type": "Buffer",
    },
  ],
}
`;
